--- a/index.html
+++ b/index.html
@@ -125,21 +125,21 @@
          <div class="icon">
            <i class="fas fa-paint-brush"></i>
        </div>
-       <div class="topic">Graphic Design</div>
+       <div class="topic">Video Editing</div>
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
      </div>
        <div class="box">
          <div class="icon">
            <i class="fas fa-chart-line"></i>
        </div>
-       <div class="topic">Digital Marketing</div>
+       <div class="topic">Marketing</div>
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
      </div>
        <div class="box">
          <div class="icon">
            <i class="fab fa-android"></i>
        </div>
-       <div class="topic">Icon Design</div>
+       <div class="topic">Little Design</div>
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia autem quam odio, qui voluptatem eligendi?</p>
      </div>
        <div class="box">
